--- a/growTracker/vite-project/package.json
+++ b/growTracker/vite-project/package.json
@@ -16,6 +16,7 @@
     "ol": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.6"
@@ -33,6 +34,7 @@
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "babel-jest": "^29.7.0",
+    "cypress": "^13.6.3",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
